refactor: Replace Orb component with simpler visuals
The Orb component, while visually appealing, was removed from several sections of the site and replaced with simpler, more static icons and visuals. This change aims to reduce complexity and improve performance. The main Orb component's styling was also updated to a simpler gradient.

Additionally, a favicon has been added to the index.html for better browser tab identification.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="buy POS system Kenya, POS system price Kenya, best POS software Kenya, affordable POS system Nairobi, POS machine for sale Kenya, restaurant POS system Kenya, retail POS system Kenya, cloud POS system Kenya, POS system with Mpesa integration Kenya">
     <link rel="canonical" href="https://veira.app/" />
     
+    <!-- Favicon: Simplified Flat Orb -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='48' fill='%239B4BB6'/></svg>">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
